Practica_03/bin/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones DEF MAIN '(' ')' ':' VOID '{' '}'

   2  definiciones : definiciones definicion
   3               |

   4  definicion : def ';'
   5             | funcion

   6  funcion : DEF ID '(' params ')' ':' retorno '{' body '}'

   7  body : defs
   8       | sentencias
   9       | defs sentencias
  10       |

  11  retorno : tipo
  12          | VOID

  13  params :
  14         | param

  15  param : par
  16        | param ',' par

  17  par : ID ':' tipo

  18  defs : def ';'
  19       | defs def ';'

  20  def : ids ':' tipo

  21  ids : ID
  22      | ids ',' ID

  23  tipo : INT
  24       | DOUBLE
  25       | CHAR
  26       | '[' INT_CONSTANT ']' tipo
  27       | STRUCT '{' campos '}'

  28  campos : campo
  29         | campos campo

  30  campo : ids ':' tipo ';'

  31  sentencias : sentencia
  32             | sentencias sentencia

  33  sentencia : PRINT list ';'
  34            | INPUT list ';'
  35            | RETURN expresion ';'
  36            | asignacion ';'
  37            | condicionales
  38            | while
  39            | invocacion ';'

  40  expresion : ID
  41            | INT_CONSTANT
  42            | CHAR_CONSTANT
  43            | REAL_CONSTANT
  44            | '(' expresion ')'
  45            | expresion '[' expresion ']'
  46            | expresion '.' expresion
  47            | '(' tipo ')' expresion
  48            | '-' expresion
  49            | '!' expresion
  50            | expresion '*' expresion
  51            | expresion '/' expresion
  52            | expresion '%' expresion
  53            | expresion '+' expresion
  54            | expresion '-' expresion
  55            | expresion '>' expresion
  56            | expresion GREATER expresion
  57            | expresion '<' expresion
  58            | expresion SMALLER expresion
  59            | expresion NEGATION expresion
  60            | expresion EQUALS expresion
  61            | expresion AND expresion
  62            | expresion OR expresion

  63  list : expresion
  64       | list ',' expresion

  65  asignacion : expresion '=' expresion

  66  while : WHILE expresion ':' '{' sentencias '}'

  67  condicionales : IF expresion ':' cuerpo else

  68  else :
  69       | ELSE cuerpo

  70  cuerpo : '{' sentencias '}'

  71  invocacion : ID '(' args ')'

  72  args :
  73       | arg

  74  arg : ID
  75      | arg ',' ID

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . DEF MAIN '(' ')' ':' VOID '{' '}'  (1)
	definiciones : definiciones . definicion  (2)

	DEF  shift 3
	ID  shift 4
	.  error

	definicion  goto 5
	def  goto 6
	funcion  goto 7
	ids  goto 8


state 3
	programa : definiciones DEF . MAIN '(' ')' ':' VOID '{' '}'  (1)
	funcion : DEF . ID '(' params ')' ':' retorno '{' body '}'  (6)

	ID  shift 9
	MAIN  shift 10
	.  error


state 4
	ids : ID .  (21)

	.  reduce 21


state 5
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 6
	definicion : def . ';'  (4)

	';'  shift 11
	.  error


state 7
	definicion : funcion .  (5)

	.  reduce 5


state 8
	def : ids . ':' tipo  (20)
	ids : ids . ',' ID  (22)

	':'  shift 12
	','  shift 13
	.  error


state 9
	funcion : DEF ID . '(' params ')' ':' retorno '{' body '}'  (6)

	'('  shift 14
	.  error


state 10
	programa : definiciones DEF MAIN . '(' ')' ':' VOID '{' '}'  (1)

	'('  shift 15
	.  error


state 11
	definicion : def ';' .  (4)

	.  reduce 4


state 12
	def : ids ':' . tipo  (20)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21


state 13
	ids : ids ',' . ID  (22)

	ID  shift 22
	.  error


state 14
	funcion : DEF ID '(' . params ')' ':' retorno '{' body '}'  (6)
	params : .  (13)

	ID  shift 23
	')'  reduce 13

	params  goto 24
	param  goto 25
	par  goto 26


state 15
	programa : definiciones DEF MAIN '(' . ')' ':' VOID '{' '}'  (1)

	')'  shift 27
	.  error


state 16
	tipo : INT .  (23)

	.  reduce 23


state 17
	tipo : DOUBLE .  (24)

	.  reduce 24


state 18
	tipo : CHAR .  (25)

	.  reduce 25


state 19
	tipo : STRUCT . '{' campos '}'  (27)

	'{'  shift 28
	.  error


state 20
	tipo : '[' . INT_CONSTANT ']' tipo  (26)

	INT_CONSTANT  shift 29
	.  error


state 21
	def : ids ':' tipo .  (20)

	.  reduce 20


state 22
	ids : ids ',' ID .  (22)

	.  reduce 22


state 23
	par : ID . ':' tipo  (17)

	':'  shift 30
	.  error


state 24
	funcion : DEF ID '(' params . ')' ':' retorno '{' body '}'  (6)

	')'  shift 31
	.  error


state 25
	params : param .  (14)
	param : param . ',' par  (16)

	','  shift 32
	')'  reduce 14


state 26
	param : par .  (15)

	.  reduce 15


state 27
	programa : definiciones DEF MAIN '(' ')' . ':' VOID '{' '}'  (1)

	':'  shift 33
	.  error


state 28
	tipo : STRUCT '{' . campos '}'  (27)

	ID  shift 4
	.  error

	ids  goto 34
	campos  goto 35
	campo  goto 36


state 29
	tipo : '[' INT_CONSTANT . ']' tipo  (26)

	']'  shift 37
	.  error


state 30
	par : ID ':' . tipo  (17)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 38


state 31
	funcion : DEF ID '(' params ')' . ':' retorno '{' body '}'  (6)

	':'  shift 39
	.  error


state 32
	param : param ',' . par  (16)

	ID  shift 23
	.  error

	par  goto 40


state 33
	programa : definiciones DEF MAIN '(' ')' ':' . VOID '{' '}'  (1)

	VOID  shift 41
	.  error


state 34
	ids : ids . ',' ID  (22)
	campo : ids . ':' tipo ';'  (30)

	':'  shift 42
	','  shift 13
	.  error


state 35
	tipo : STRUCT '{' campos . '}'  (27)
	campos : campos . campo  (29)

	ID  shift 4
	'}'  shift 43
	.  error

	ids  goto 34
	campo  goto 44


state 36
	campos : campo .  (28)

	.  reduce 28


state 37
	tipo : '[' INT_CONSTANT ']' . tipo  (26)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 45


state 38
	par : ID ':' tipo .  (17)

	.  reduce 17


state 39
	funcion : DEF ID '(' params ')' ':' . retorno '{' body '}'  (6)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 46
	'['  shift 20
	.  error

	retorno  goto 47
	tipo  goto 48


state 40
	param : param ',' par .  (16)

	.  reduce 16


state 41
	programa : definiciones DEF MAIN '(' ')' ':' VOID . '{' '}'  (1)

	'{'  shift 49
	.  error


state 42
	campo : ids ':' . tipo ';'  (30)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 50


state 43
	tipo : STRUCT '{' campos '}' .  (27)

	.  reduce 27


state 44
	campos : campos campo .  (29)

	.  reduce 29


state 45
	tipo : '[' INT_CONSTANT ']' tipo .  (26)

	.  reduce 26


state 46
	retorno : VOID .  (12)

	.  reduce 12


state 47
	funcion : DEF ID '(' params ')' ':' retorno . '{' body '}'  (6)

	'{'  shift 51
	.  error


state 48
	retorno : tipo .  (11)

	.  reduce 11


state 49
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' . '}'  (1)

	'}'  shift 52
	.  error


state 50
	campo : ids ':' tipo . ';'  (30)

	';'  shift 53
	.  error


state 51
	funcion : DEF ID '(' params ')' ':' retorno '{' . body '}'  (6)
	body : .  (10)

	INT_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 60
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'}'  reduce 10

	def  goto 66
	body  goto 67
	defs  goto 68
	sentencias  goto 69
	ids  goto 8
	sentencia  goto 70
	expresion  goto 71
	asignacion  goto 72
	condicionales  goto 73
	while  goto 74
	invocacion  goto 75


state 52
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' '}' .  (1)

	.  reduce 1


state 53
	campo : ids ':' tipo ';' .  (30)

	.  reduce 30


state 54
	expresion : INT_CONSTANT .  (41)

	.  reduce 41


state 55
	sentencia : INPUT . list ';'  (34)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	list  goto 77
	expresion  goto 78


state 56
	sentencia : PRINT . list ';'  (33)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	list  goto 79
	expresion  goto 78


state 57
	while : WHILE . expresion ':' '{' sentencias '}'  (66)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 80


state 58
	condicionales : IF . expresion ':' cuerpo else  (67)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 81


state 59
	sentencia : RETURN . expresion ';'  (35)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 82


state 60
	ids : ID .  (21)
	expresion : ID .  (40)
	invocacion : ID . '(' args ')'  (71)

	'('  shift 83
	GREATER  reduce 40
	SMALLER  reduce 40
	EQUALS  reduce 40
	NEGATION  reduce 40
	OR  reduce 40
	AND  reduce 40
	'='  reduce 40
	'<'  reduce 40
	'>'  reduce 40
	'-'  reduce 40
	'+'  reduce 40
	'%'  reduce 40
	'/'  reduce 40
	'*'  reduce 40
	'.'  reduce 40
	'['  reduce 40
	':'  reduce 21
	','  reduce 21


state 61
	expresion : REAL_CONSTANT .  (43)

	.  reduce 43


state 62
	expresion : CHAR_CONSTANT .  (42)

	.  reduce 42


state 63
	expresion : '-' . expresion  (48)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 84


state 64
	expresion : '!' . expresion  (49)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 85


state 65
	expresion : '(' . expresion ')'  (44)
	expresion : '(' . tipo ')' expresion  (47)

	INT_CONSTANT  shift 54
	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'['  shift 20
	'('  shift 65
	.  error

	tipo  goto 86
	expresion  goto 87


state 66
	defs : def . ';'  (18)

	';'  shift 88
	.  error


state 67
	funcion : DEF ID '(' params ')' ':' retorno '{' body . '}'  (6)

	'}'  shift 89
	.  error


state 68
	body : defs .  (7)
	body : defs . sentencias  (9)
	defs : defs . def ';'  (19)

	INT_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 60
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'}'  reduce 7

	def  goto 90
	sentencias  goto 91
	ids  goto 8
	sentencia  goto 70
	expresion  goto 71
	asignacion  goto 72
	condicionales  goto 73
	while  goto 74
	invocacion  goto 75


state 69
	body : sentencias .  (8)
	sentencias : sentencias . sentencia  (32)

	INT_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 92
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'}'  reduce 8

	sentencia  goto 93
	expresion  goto 71
	asignacion  goto 72
	condicionales  goto 73
	while  goto 74
	invocacion  goto 75


state 70
	sentencias : sentencia .  (31)

	.  reduce 31


state 71
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)
	asignacion : expresion . '=' expresion  (65)

	GREATER  shift 94
	SMALLER  shift 95
	EQUALS  shift 96
	NEGATION  shift 97
	OR  shift 98
	AND  shift 99
	'='  shift 100
	'<'  shift 101
	'>'  shift 102
	'-'  shift 103
	'+'  shift 104
	'%'  shift 105
	'/'  shift 106
	'*'  shift 107
	'.'  shift 108
	'['  shift 109
	.  error


state 72
	sentencia : asignacion . ';'  (36)

	';'  shift 110
	.  error


state 73
	sentencia : condicionales .  (37)

	.  reduce 37


state 74
	sentencia : while .  (38)

	.  reduce 38


state 75
	sentencia : invocacion . ';'  (39)

	';'  shift 111
	.  error


state 76
	expresion : ID .  (40)

	.  reduce 40


state 77
	sentencia : INPUT list . ';'  (34)
	list : list . ',' expresion  (64)

	';'  shift 112
	','  shift 113
	.  error


state 78
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)
	list : expresion .  (63)

	GREATER  shift 94
	SMALLER  shift 95
	EQUALS  shift 96
	NEGATION  shift 97
	OR  shift 98
	AND  shift 99
	'<'  shift 101
	'>'  shift 102
	'-'  shift 103
	'+'  shift 104
	'%'  shift 105
	'/'  shift 106
	'*'  shift 107
	'.'  shift 108
	'['  shift 109
	';'  reduce 63
	','  reduce 63


state 79
	sentencia : PRINT list . ';'  (33)
	list : list . ',' expresion  (64)

	';'  shift 114
	','  shift 113
	.  error


state 80
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)
	while : WHILE expresion . ':' '{' sentencias '}'  (66)

	GREATER  shift 94
	SMALLER  shift 95
	EQUALS  shift 96
	NEGATION  shift 97
	OR  shift 98
	AND  shift 99
	'<'  shift 101
	'>'  shift 102
	'-'  shift 103
	'+'  shift 104
	'%'  shift 105
	'/'  shift 106
	'*'  shift 107
	'.'  shift 108
	'['  shift 109
	':'  shift 115
	.  error


state 81
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)
	condicionales : IF expresion . ':' cuerpo else  (67)

	GREATER  shift 94
	SMALLER  shift 95
	EQUALS  shift 96
	NEGATION  shift 97
	OR  shift 98
	AND  shift 99
	'<'  shift 101
	'>'  shift 102
	'-'  shift 103
	'+'  shift 104
	'%'  shift 105
	'/'  shift 106
	'*'  shift 107
	'.'  shift 108
	'['  shift 109
	':'  shift 116
	.  error


state 82
	sentencia : RETURN expresion . ';'  (35)
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)

	GREATER  shift 94
	SMALLER  shift 95
	EQUALS  shift 96
	NEGATION  shift 97
	OR  shift 98
	AND  shift 99
	'<'  shift 101
	'>'  shift 102
	'-'  shift 103
	'+'  shift 104
	'%'  shift 105
	'/'  shift 106
	'*'  shift 107
	'.'  shift 108
	'['  shift 109
	';'  shift 117
	.  error


state 83
	invocacion : ID '(' . args ')'  (71)
	args : .  (72)

	ID  shift 118
	')'  reduce 72

	args  goto 119
	arg  goto 120


state 84
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : '-' expresion .  (48)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)

	'.'  shift 108
	'['  shift 109
	GREATER  reduce 48
	SMALLER  reduce 48
	EQUALS  reduce 48
	NEGATION  reduce 48
	OR  reduce 48
	AND  reduce 48
	'='  reduce 48
	'<'  reduce 48
	'>'  reduce 48
	'-'  reduce 48
	'+'  reduce 48
	'%'  reduce 48
	'/'  reduce 48
	'*'  reduce 48
	']'  reduce 48
	')'  reduce 48
	':'  reduce 48
	';'  reduce 48
	','  reduce 48


state 85
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : '!' expresion .  (49)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)

	'.'  shift 108
	'['  shift 109
	GREATER  reduce 49
	SMALLER  reduce 49
	EQUALS  reduce 49
	NEGATION  reduce 49
	OR  reduce 49
	AND  reduce 49
	'='  reduce 49
	'<'  reduce 49
	'>'  reduce 49
	'-'  reduce 49
	'+'  reduce 49
	'%'  reduce 49
	'/'  reduce 49
	'*'  reduce 49
	']'  reduce 49
	')'  reduce 49
	':'  reduce 49
	';'  reduce 49
	','  reduce 49


state 86
	expresion : '(' tipo . ')' expresion  (47)

	')'  shift 121
	.  error


state 87
	expresion : '(' expresion . ')'  (44)
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)

	GREATER  shift 94
	SMALLER  shift 95
	EQUALS  shift 96
	NEGATION  shift 97
	OR  shift 98
	AND  shift 99
	'<'  shift 101
	'>'  shift 102
	'-'  shift 103
	'+'  shift 104
	'%'  shift 105
	'/'  shift 106
	'*'  shift 107
	'.'  shift 108
	'['  shift 109
	')'  shift 122
	.  error


state 88
	defs : def ';' .  (18)

	.  reduce 18


state 89
	funcion : DEF ID '(' params ')' ':' retorno '{' body '}' .  (6)

	.  reduce 6


state 90
	defs : defs def . ';'  (19)

	';'  shift 123
	.  error


state 91
	body : defs sentencias .  (9)
	sentencias : sentencias . sentencia  (32)

	INT_CONSTANT  shift 54
	INPUT  shift 55
	PRINT  shift 56
	WHILE  shift 57
	IF  shift 58
	RETURN  shift 59
	ID  shift 92
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'}'  reduce 9

	sentencia  goto 93
	expresion  goto 71
	asignacion  goto 72
	condicionales  goto 73
	while  goto 74
	invocacion  goto 75


state 92
	expresion : ID .  (40)
	invocacion : ID . '(' args ')'  (71)

	'('  shift 83
	GREATER  reduce 40
	SMALLER  reduce 40
	EQUALS  reduce 40
	NEGATION  reduce 40
	OR  reduce 40
	AND  reduce 40
	'='  reduce 40
	'<'  reduce 40
	'>'  reduce 40
	'-'  reduce 40
	'+'  reduce 40
	'%'  reduce 40
	'/'  reduce 40
	'*'  reduce 40
	'.'  reduce 40
	'['  reduce 40


state 93
	sentencias : sentencias sentencia .  (32)

	.  reduce 32


state 94
	expresion : expresion GREATER . expresion  (56)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 124


state 95
	expresion : expresion SMALLER . expresion  (58)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 125


state 96
	expresion : expresion EQUALS . expresion  (60)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 126


state 97
	expresion : expresion NEGATION . expresion  (59)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 127


state 98
	expresion : expresion OR . expresion  (62)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 128


state 99
	expresion : expresion AND . expresion  (61)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 129


state 100
	asignacion : expresion '=' . expresion  (65)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 130


state 101
	expresion : expresion '<' . expresion  (57)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 131


state 102
	expresion : expresion '>' . expresion  (55)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 132


state 103
	expresion : expresion '-' . expresion  (54)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 133


state 104
	expresion : expresion '+' . expresion  (53)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 134


state 105
	expresion : expresion '%' . expresion  (52)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 135


state 106
	expresion : expresion '/' . expresion  (51)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 136


state 107
	expresion : expresion '*' . expresion  (50)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 137


state 108
	expresion : expresion '.' . expresion  (46)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 138


state 109
	expresion : expresion '[' . expresion ']'  (45)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 139


state 110
	sentencia : asignacion ';' .  (36)

	.  reduce 36


state 111
	sentencia : invocacion ';' .  (39)

	.  reduce 39


state 112
	sentencia : INPUT list ';' .  (34)

	.  reduce 34


state 113
	list : list ',' . expresion  (64)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 140


state 114
	sentencia : PRINT list ';' .  (33)

	.  reduce 33


state 115
	while : WHILE expresion ':' . '{' sentencias '}'  (66)

	'{'  shift 141
	.  error


state 116
	condicionales : IF expresion ':' . cuerpo else  (67)

	'{'  shift 142
	.  error

	cuerpo  goto 143


state 117
	sentencia : RETURN expresion ';' .  (35)

	.  reduce 35


state 118
	arg : ID .  (74)

	.  reduce 74


state 119
	invocacion : ID '(' args . ')'  (71)

	')'  shift 144
	.  error


state 120
	args : arg .  (73)
	arg : arg . ',' ID  (75)

	','  shift 145
	')'  reduce 73


state 121
	expresion : '(' tipo ')' . expresion  (47)

	INT_CONSTANT  shift 54
	ID  shift 76
	REAL_CONSTANT  shift 61
	CHAR_CONSTANT  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	.  error

	expresion  goto 146


state 122
	expresion : '(' expresion ')' .  (44)

	.  reduce 44


state 123
	defs : defs def ';' .  (19)

	.  reduce 19


state 124
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
	expresion : expresion GREATER expresion .  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . SMALLER expresion  (58)
	expresion : expresion . NEGATION expresion  (59)
	expresion : expresion . EQUALS expresion  (60)
	expresion : expresion . AND expresion  (61)
	expresion : expresion . OR expresion  (62)

	'>'  shift 102
	'-'  shift 103
	'+'  shift 104
	'%'  shift 105
	'/'  shift 106
	'*'  shift 107
	'.'  shift 108
	'['  shift 109
	GREATER  reduce 56
	SMALLER  reduce 56
	EQUALS  reduce 56
	NEGATION  reduce 56
	OR  reduce 56
	AND  reduce 56
	'='  reduce 56
	'<'  reduce 56
	']'  reduce 56
	')'  reduce 56
	':'  reduce 56
	';'  reduce 56
	','  reduce 56


state 125
	expresion : expresion . '[' expresion ']'  (45)
	expresion : expresion . '.' expresion  (46)
	expresion : expresion . '*' expresion  (50)
	expresion : expresion . '/' expresion  (51)
	expresion : expresion . '%' expresion  (52)
	expresion : expresion . '+' expresion  (53)
	expresion : expresion . '-' expresion  (54)
	expresion : expresion . '>' expresion  (55)
	expresion : expresion . GREATER expresion  (56)
